resources/style.css
#large-title{
  font-family: Helvetica;
  font-size: 70px;
  font-weight:bold;
  color: white;
  text-align: center;
}

.image {
background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
}

.header {
  font-family: Helvetica;
  font-size: 18px;
  color: white;
  text-align: center;
}

body{
  text-align: center;
  font-family: Helvetica;
}

h2{
  font-size: 32px;
  font-weight: bold;
}

h3{
  font-size: 23px;
  font-weight: bold;
}
.focus{
  font-size: 14px;
}

.special{
  font-size: 11px;
  color: white;
}
.New-York{
  font-size: 23px;
  font-weight: bold;
  color: white;
  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
}
.bottom{
  display:flex;
  font-family: Helvetica;
  font-size: 18px;
  color: white;
  background-color: dimgray;
}
footer a{
   margin: 0 0.2em;
   text-decoration:none;
   color:inherit;
 }

